[gd_scene load_steps=7 format=3 uid="uid://ckrafjdrnvky2"]

[ext_resource type="Script" path="res://scenes/tile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://wgbxeid35e80" path="res://assets/tile.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dutuwlxnanmts" path="res://assets/gem.png" id="3_31ac8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oom3t"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bau6s"]
size = Vector2(16, 16)

[node name="Area2D" type="Area2D" groups=["tile"]]
modulate = Color(1, 1, 1, 0.0823529)
collision_mask = 3
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2")

[node name="Gem" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem"]
shape = SubResource("RectangleShape2D_oom3t")

[node name="Sprite2D" type="Sprite2D" parent="Gem"]
texture = ExtResource("3_31ac8")

[node name="tile_collision" type="StaticBody2D" parent="." groups=["tile_building"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="tile_collision"]
shape = SubResource("RectangleShape2D_bau6s")
disabled = true

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_tile_mouse_exited"]
[connection signal="area_entered" from="Gem" to="." method="_on_gem_area_entered"]
[connection signal="mouse_entered" from="Gem" to="." method="_on_tile_mouse_entered"]
[connection signal="mouse_exited" from="Gem" to="." method="_on_tile_mouse_exited"]
